--- a/views/index.html
+++ b/views/index.html
@@ -4,11 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Python</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <h1>Python</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad voluptatem nam ut libero quas aut, labore nobis numquam explicabo dolorum alias doloribus modi repudiandae facilis, harum magnam! Cupiditate sint dolores in quo. Voluptatem at veniam, cumque natus ea vitae laborum, veritatis rerum animi odio in quo sequi cupiditate iure corrupti error possimus nesciunt numquam. Quas reiciendis vel laboriosam eius ad voluptatibus mollitia consequatur sed necessitatibus commodi praesentium dignissimos eaque libero ex distinctio tenetur odio pariatur atque, perspiciatis, quos velit. Velit nihil quas voluptatum iure tempore suscipit sit. Alias rerum facilis, cumque aspernatur iusto, eius sit officiis minima non sapiente qui!</p>
-    <a href="/crud">Acessar o CRUD</a>
-    <a href="/amanda">Acessar Amanda</a>
+<body style="background-color: black;">
+    <h1 style="color: aliceblue;">Python</h1>
+    <p style="color: aliceblue;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad voluptatem nam ut libero quas aut, labore nobis numquam explicabo dolorum alias doloribus modi repudiandae facilis, harum magnam! Cupiditate sint dolores in quo. Voluptatem at veniam, cumque natus ea vitae laborum, veritatis rerum animi odio in quo sequi cupiditate iure corrupti error possimus nesciunt numquam. Quas reiciendis vel laboriosam eius ad voluptatibus mollitia consequatur sed necessitatibus commodi praesentium dignissimos eaque libero ex distinctio tenetur odio pariatur atque, perspiciatis, quos velit. Velit nihil quas voluptatum iure tempore suscipit sit. Alias rerum facilis, cumque aspernatur iusto, eius sit officiis minima non sapiente qui!</p>
+    <img src="img/arq.jpg">
+    <a href="/crud" style="color: aliceblue;">Acessar o CRUD</a>
+    <br>
+    <a href="/amanda" style="color: aliceblue;">Acessar Amanda</a>
+    <hr>
+    <br>
+    <a href="/herois" style="color: aliceblue;">Acessar Herois</a>
+    <hr>
+    
+    <p style="color: aliceblue;">
+        {# Este é um comentario em jinja2 #}
+
+        {% if pEscola == "ETEC" %}
+        Eu estudo na <B>{{ pEscola + " de " + pUnidade}}</B>
+        
+        {% elif pEscola == "Fábio Barreto" %}
+        Eu estudo n <B>{{ pEscola + " de " + pUnidade}}</B>
+
+        {% else %}
+        Escola desconhecida!
+
+        {% endif %}
+
+    </p>
 </body>
 </html>
