--- a/views/herois.html
+++ b/views/herois.html
@@ -19,7 +19,7 @@
         {% if pUniverso == "marvel" %}
             {% if pHeroi == "miranha" %}
                 O <B>{{ pHeroi + " é um heroi da " + pUniverso}}</B><br>
-                <img src="img/miran.jpg">
+                <img src="img/vn.jpg">
             {% elif pHeroi == "viuva negra" %}
                 A <B>{{ pHeroi + " é um heroi da " + pUniverso}}</B><br>
                 <img src="img/vn.jpg">
